# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
auth-service/: .gitignore  Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs  routes.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/http_response/: auth.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  refresh_token.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  refresh_token.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
