[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["unic"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
test_helpers = { path = "./test_helpers" }
redis = { version = "0.25.2", features = ["tokio-comp"] }

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json", "cookies"] }
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
